# iac-template

./: .coveragerc  .env-config.yaml  .gitignore  .pre-commit-config.yaml  .providers.tf  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: .labeler.yml
.github/workflows/: label.yml  release.yml  test.yml
components/: terragrunt.hcl
components/bootstrap/: bootstrap.hcl
components/bootstrap/resource_groups/: .terraform.lock.hcl  terragrunt.hcl
modules/_bootstrap_resource_groups/: README.md  main.tf  outputs.tf  variables.tf
modules/_bootstrap_resource_groups/queries/: bootstrap.json
tools/environments/: iac.py  test.py
tools/environments/test_config/: invalid_component.yaml  valid_env_vars.yaml
tools/setup/: setup.py
