[tool.poetry]
name = "scalably-zwt-iac-project"
version = "0.1.0"
description = "Python wrapper for terragrunt"
readme = "README.md"
authors = ["Lee Myring"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "*"
pyyaml = "*"
python-terraform = "^0.10.1"
Jinja2 = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
safety = "*"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-pycodestyle = "^2.2.0"
reorder-python-imports = "^2.3.6"
black = "^20.8b1"
pytest-black = "^0.3.12"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
